# platform/src/main/resources/conf/openapi.json
@@ -19,6 +19,38 @@
     }
   ],
   "paths": {
+    "/code": {
+      "get": {
+        "summary": "获取验证码",
+        "operationId": "code",
+        "tags": [
+          "登录"
+        ],
+        "parameters": [
+          {
+            "name": "randomStr",
+            "in": "query",
+            "description": "申请验证码的随机字符串",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "成功",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/loginByUsernameAo"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/login/token/byUsername": {
       "post": {
         "summary": "用户登录",
